# ccgcs_graph

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  main  maketarball  test
_doc_tests/html/: annotated.html  classes.html  dir_1d4f848b8bfc734495f6ec015350d07c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  header_8h.html  header_8h_source.html  index.html  menudata.js  namespacegcs.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  position_8cpp.html  position_8hpp.html  position_8hpp_source.html  source_8cpp.html  structgcs_1_1position2_d-members.html  structgcs_1_1position2_d.html  structgcs_1_1position3_d-members.html  structgcs_1_1position3_d.html
_doc_tests/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js
_doc_tests/latex/: annotated.tex  files.tex  header_8h.tex  index.tex  namespacegcs.tex  namespaces.tex  position_8cpp.tex  position_8hpp.tex  refman.tex  source_8cpp.tex  structgcs_1_1position2_d.tex  structgcs_1_1position3_d.tex
client/: main.cpp
doc/: doc.md
include/: edge.hpp  edge_impl.hpp  gcs_utils.hpp  graph.hpp  header.h  header.hpp  include.txt  node.hpp  point.hpp  point_impl.tpp  position.hpp  vec.hpp  vec_impl.hpp  vec_impl.tpp
src/: edge.cpp  gcs_utils.cpp  graph.cpp  node.cpp  point.cpp  position.cpp  source.cpp  vec.cpp
temp/: Makefile  point copy.hpp  point_impl copy.tpp  temp.txt  vec copy.hpp  vec_impl copy.tpp  vec_twopts.cpp  vec_twopts.hpp
tests/: test.cpp
